fix sis and lor templates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ web:
     - .:/usr/src/app
   links:
     - redis
+  command: "bin/hubot -a slack"
   environment:
     HUBOT_GRAFANA_URL: "https://grafana.insops.net"
     HUBOT_GLINK_HOSTNAME: "graphite.insops.net"
@@ -23,6 +24,8 @@ web:
     HUBOT_GLINK_PANDASH_TEMPLATE_DEFAULTS: "!!#controller#!!===api-v1-apps, !!#action#!!===show, !!#type#!!===total, !!#stat#!!==={mean,median,upper_95}"
     HUBOT_GLINK_CATALOG_TEMPLATE: "stats.timers.ins-app.catalog.production.request.!!#controller#!!.!!#action#!!.!!#type#!!.!!#stat#!!"
     HUBOT_GLINK_CATALOG_TEMPLATE_DEFAULTS: "!!#controller#!!===enrollment, !!#action#!!===create, !!#type#!!===total, !!#stat#!!==={mean,median,upper_95}"
+    HUBOT_GLINK_SIS_APP_TEMPLATE: "stats.timers.sis_app.production.request.!!#controller#!!.!!#action#!!.!!#type#!!.!!#stat#!!"
+    HUBOT_GLINK_SIS_APP_TEMPLATE_DEFAULTS: "!!#controller#!!===agent_files, !!#action#!!===create, !!#type#!!===total, !!#stat#!!==={mean,median,upper_95}"
     HUBOT_GLINK_ZUULEDGE_TEMPLATE: "stats.timers.cg.zuul.edge.request.!!#controller#!!.!!#action#!!.!!#type#!!.!!#stat#!!"
     HUBOT_GLINK_ZUULEDGE_TEMPLATE_DEFAULTS: "!!#controller#!!===api-roles, !!#action#!!===index, !!#type#!!===total, !!#stat#!!==={mean,median,upper_95}"
     HUBOT_GLINK_ZUUL_TEMPLATE: "stats.timers.cg.zuul.prod.request.!!#controller#!!.!!#action#!!.!!#type#!!.!!#stat#!!"
@@ -33,7 +36,7 @@ web:
     HUBOT_GLINK_DREDD_TEMPLATE_DEFAULTS: "!!#controller#!!===problems, !!#action#!!===sidebar, !!#type#!!===total, !!#stat#!!==={mean,median,upper_95}"
     HUBOT_GLINK_TWEED_TEMPLATE: "stats.timers.cg.tweed.production.request.!!#controller#!!.!!#action#!!.!!#type#!!.!!#stat#!!"
     HUBOT_GLINK_TWEED_TEMPLATE_DEFAULTS: "!!#controller#!!===tweed_auth-sessions, !!#action#!!===show, !!#type#!!===total, !!#stat#!!==={mean,median,upper_95}"
-    HUBOT_GLINK_LOR_TEMPLATE: "stats.timers.ins-app.lor-production.us-east-1.duration.!!#controller#!!.!!#action#!!.!!#stat#!!"
-    HUBOT_GLINK_LOR_TEMPLATE_DEFAULTS: "!!#controller#!!===Courses, !!#action#!!===index, !!#stat#!!==={mean,median,upper_95}"
+    HUBOT_GLINK_LOR_TEMPLATE: "stats.timers.ins-app.lor-production.us-east-1.requests.!!#controller#!!.!!#action#!!.!!#type#!!.!!#stat#!!"
+    HUBOT_GLINK_LOR_TEMPLATE_DEFAULTS: "!!#controller#!!===Courses, !!#action#!!===index, !!#type#!!===total, !!#stat#!!==={mean,median,upper_95}"
     HUBOT_SLACK_TOKEN:
     HUBOT_GLINK_CREDS:
